nats-micro/tests/ui/v4_test_requires_feature.rs
#[nats_micro::test]
async fn needs_test_util() {}

fn main() {}
